Poprawki kosmetyczne API wewnęŧrznego i poprawka obsługi classPaht URL